# prizm

./: .gitignore  Cargo.toml  README.md  test.g3a  test1.hex  test2.hex
.github/workflows/: rust.yml
assembler/: Cargo.toml
assembler/src/: convert.rs  entry.rs  find_labels.rs  lib.rs
compiler/: Cargo.toml  README.md
compiler/examples/: draw_square.c  draw_vram.c  functions.c  nested_loops.c  simple.c  simple_array.c  simple_loop.c
compiler/examples/tests/: example.c
compiler/src/: assembler.rs  backend.rs  const_eval.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty_print.rs  semantics.rs
compiler/src/assembler/: convert.rs  entry.rs
compiler/src/backend/: expression.rs  function.rs  internal.rs  statement.rs  syscall.rs
compiler/src/backend/function/: variables.rs
compiler/src/backend/function/variables/: params.rs  vars.rs
compiler/src/backend/internal/: funcs.rs  get_size.rs  mov_instr.rs  store.rs
compiler/src/backend/statement/: comparison.rs  condition.rs
compiler/src/lexer/: seperator.rs  tokenizer.rs  word.rs
compiler/src/parser/: call_params.rs  comparison.rs  condition.rs  datatype.rs  expression.rs  func_args.rs  function.rs  statements.rs
compiler/src/parser/datatype/: parse_dt.rs
compiler/src/parser/expression/: single.rs
compiler/src/parser/statements/: scope.rs  single.rs
compiler/tests/: arrays.rs  conditionals.rs  dereferences.rs  functions.rs  loop_test.rs
emulator/: Cargo.toml  README.md
emulator/src/: cpu.rs  display.rs  em.rs  general.rs  input.rs  inputs.rs  instructiontype.rs  lib.rs  main.rs  memory.rs  target.rs  traits.rs  wasm.rs
emulator/src/em/: syscall.rs
emulator/src/em/syscall/: app.rs  disp.rs  fs.rs  rtc.rs  serial.rs  sys.rs  timer.rs
emulator/src/general/: sign_extend.rs
emulator/src/mock/: display.rs  input.rs
emulator/src/system/: mod.rs  syscall.rs
emulator/src/system/syscall/: app.rs  disp.rs  fs.rs  rtc.rs  serial.rs  sys.rs  timer.rs
emulator/src/wasm/: executor.rs
examples/: crashes.c  dino.g3a  draw_vram_loop.c  other.c  simple.c  works.c
g3a/src/: eactivity.rs  (+7 more)
sh/: Cargo.toml
src/: asm.rs  compiler.rs  emulator.rs  g3a.rs  lib.rs  main.rs  sh3.rs  util.rs
(+40 files in other folders)
