[package]
name = "casio"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8" }
image = { version = "0.23" }
chrono = { version = "0.4.19" }
structopt = { version = "0.3" }
