[package]
name = "compiler"
version = "0.1.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sh = { path = "../sh" }
g3a = { path = "../g3a" }

rand = { version = "0.8" }
chrono = { version = "0.4.19" }
structopt = { version = "0.3" }

[dev-dependencies]
emulator = { path = "../emulator" }
